# diffusion-uncertainty

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: stable_diffusion_best_aleatoric.yaml  stable_diffusion_diagnostic_epistemic.yaml  stable_diffusion_epistemic_50steps.yaml  stable_diffusion_fixed_methods.yaml  stable_diffusion_fixed_methods_lowmem.yaml  stable_diffusion_fixed_methods_matched_sweep_no_original.yaml  stable_diffusion_fixed_methods_ultralowmem.yaml  stable_diffusion_fixed_methods_ultralowmem_no_original.yaml  stable_diffusion_overnight_epistemic.yaml  stable_diffusion_top_wandb_candidates_eval.yaml  stable_diffusion_uq_comparison.yaml  stable_diffusion_uq_sweep.yaml  wandb_sweep.yaml  wandb_sweep_aleatoric.yaml  wandb_sweep_aleatoric_50steps_large.yaml  wandb_sweep_epistemic_50steps_large.yaml  wandb_sweep_gradient.yaml  wandb_sweep_guidance_hparams_large.yaml  wandb_sweep_resampling.yaml
diffusion_uncertainty/: paths.py  uncertainty_guidance.py
diffusion_uncertainty/pipeline_uncertainty/: pipeline_sampler_class_conditional_uncertainty_guided_gradient.py  pipeline_sampler_class_conditional_uncertainty_guided_posterior_distribution.py  pipeline_sampler_class_conditional_uncertainty_guided_second_order.py  pipeline_stable_diffusion_epistemic_guided.py
diffusion_uncertainty/schedulers_uncertainty/: get_uncertainty_scheduler.py
diffusion_uncertainty/uq_laplace/: __init__.py  aggregation.py  core.py  gamma2.py  guidance.py  plotting.py  subnet_laplace.py
docs/: PROJEKT_STATUS.md
scripts/: compare_uq_sd.py  compute_ause.py  compute_sweep_clip.py  compute_sweep_fid.py  download_guided_diffusion_models.py  evaluate_uq_sd.py  generate_dataset_score_uncertainty_imagenet.py  generate_diffusion_starting_data.py  generate_images_with_uncertainty_threshold.py  make_guided_grids.py  make_uq_method_grid.py  prepare_cifar10_data.py  prepare_recap_coco_sweep.py  run_batch_experiments.py  run_paper_metrics.py  run_uq_sweep.py  run_wandb_sweeps.py  summarize_uq_sweep.py  sweep_uq_sd.py
